--- a/styles.css
+++ b/styles.css
@@ -19,16 +19,11 @@ body {
 }
 
 .content-section {
-    height: 250px;
+    height: 350px;
     flex: 1 1 auto;
     overflow: hidden;
 }
 
-.content-section-small {
-    height: 250px;
-    flex: 1 1 auto;
-    overflow: hidden;
-}
 
 /* Head Content Block */
 .content-section.one {
@@ -41,16 +36,15 @@ body {
 }
 
 .content-section-one-container {
-    margin: 0 42px;
-    flex: 1;
+    margin: 0 72px;
 
 }
 
 #header {
-    flex: 1;
     display: flex;
     width: 100%;
     justify-content: space-between;
+    margin-bottom: 54px;
 }
 
 .header-logo {
@@ -65,20 +59,42 @@ ul {
     padding: 0;
 }
 
+a {
+    margin-left: 10px;
+}
+
 .header-content {
-    flex: 1;
     display: flex;
+}
+
+h1.content-header {
+    margin:0;
+    width: 250px;
 }
 
 .header-content-left {
-    flex: 1;
+    width: 380px;
     display: flex;
     flex-direction: column;
+    margin-right: 50px;
 }
 
+.header-content-left p {
+    margin: 8px 0;
+}
+
+button {
+    width: 100px;
+    height: 50px;
+    flex: 1;
+    padding: 8px;
+    border-radius: 10px;
+}
+
+
 img {
-    width: 166px;
-    height: 100px;
+    width: 380px;
+    height: 188px;
 }
 
 
