--- a/styles.css
+++ b/styles.css
@@ -9,106 +9,100 @@ body {
     border-style: dashed;
     border-width: 1px;
     border-color: red;
+    font-family: roboto;
 }
 
-.outer-container {
+.section-one {
     display: flex;
     flex-direction: column;
-    height: 100%;
-
-}
-
-.content-section {
-    height: 350px;
-    flex: 1 1 auto;
-    overflow: hidden;
-}
-
-
-/* Head Content Block */
-.content-section.one {
+    align-items: flex-start;
+    padding: 10px 275px 110px 275px;
+    gap: 100px;
     background-color: #1f2937;
-    color: white;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
 }
 
-.content-section-one-container {
-    margin: 0 72px;
-
-}
-
-#header {
+.header {
     display: flex;
     width: 100%;
     justify-content: space-between;
-    margin-bottom: 54px;
 }
 
-.header-logo {
-    margin: 0;
+.header h1 {
+    margin-top: 0;
+    font-size: 24px;
+    color: #f9faf8;
 }
 
-ul {
+
+ul.header-links {
     list-style: none;
     display: flex;
-    align-items: flex-start;
     margin: 0;
     padding: 0;
+    font-size: 18px;
+    color: #e5e7eb;
+    gap: 22px;
 }
 
-a {
-    margin-left: 10px;
+ul a {
+    text-decoration: none;
 }
 
-.header-content {
+.child-container-one {
     display: flex;
+    width: 100%;
+    min-height: 250px;
+    justify-content: space-between;
+    align-items: center;
+    gap: 45px;
 }
 
-h1.content-header {
-    margin:0;
-    width: 250px;
-}
-
-.header-content-left {
-    width: 380px;
+.left-container {
     display: flex;
     flex-direction: column;
-    margin-right: 50px;
-}
-
-.header-content-left p {
-    margin: 8px 0;
+    gap: 8px;
+    align-self: flex-start;
+    width: 45%;
+    flex: 0 1 auto;
 }
 
 button {
-    width: 100px;
-    height: 50px;
-    flex: 1;
-    padding: 8px;
-    border-radius: 10px;
-}
+   width: 150px;
+   height: 35px;
+   border-radius: 10px;
+   padding: 0;
+   margin: 0; 
+   background-color: #3882f6;
+   font-size: 20px;
+   font-weight: bolder;
+   color: #f9faf8;
 
+}
 
 img {
-    width: 380px;
-    height: 188px;
+    align-self: stretch;
+    height: 300px;
+    flex: 1 1 auto;
 }
 
-
-.content-section.two {
-    background-color: white;
-    color: black;
+.left-container h1 {
+    font-size: 48px;
+    font-weight: bolder;
+    color: #f9faf8;
 }
 
-.content-section.three {
-    background-color: #e5e7eb;
-    color: black;
+.left-container p {
+    font-size: 18px;
+    color: #e5e7eb;
 }
 
+.left-container h1, .left-container p {
+    margin: 0;
+    display: block;
+}
 
 footer {
+    align-self: flex-end;
     height: 100px;
+    width: 100%;
 }
