--- a/styles.css
+++ b/styles.css
@@ -101,6 +101,48 @@ img {
     display: block;
 }
 
+
+/* Section 2 */
+
+
+
+.section-wrapper2 {
+    display: flex;
+    flex-direction: column;
+    padding: 50px 200px;
+    min-height: 250px;
+}
+
+.section-wrapper2 h2 {
+    text-align: center;
+}
+
+
+.row-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 50px;
+}
+
+.row-container p, .row-container img {
+    margin: 0;
+    padding: 0;
+}
+
+.row-container p {
+    text-align: center;
+}
+
+.row-container img {
+    height: 150px;
+    width: 150px;
+    border-radius: 20px;
+    border-color: #3882f6;
+    border-style: solid;
+    border-width: 3px;
+}
+
 footer {
     align-self: flex-end;
     height: 100px;
