--- a/styles.css
+++ b/styles.css
@@ -115,6 +115,8 @@ img {
 
 .section-wrapper2 h2 {
     text-align: center;
+    font-size: 35px;
+    font-weight: bolder;
 }
 
 
@@ -147,4 +149,36 @@ footer {
     align-self: flex-end;
     height: 100px;
     width: 100%;
+}
+
+/* Section 3 */
+
+.section-three {
+    background-color: #e5e7eb;
+    display: flex;
+    justify-content: center;
+}
+
+.section-wrapper3 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 850px;
+    padding: 50px 150px;
+}
+
+.section-wrapper3 .quote {
+    font-size: 36px;
+    margin:0 ;
+    font-weight: lighter;
+    font-style: italic;
+    color: #1f2937
+}
+
+.section-wrapper3 .author {
+    align-self: flex-end;
+    margin: 0;
+    font-size: 36px;
+    font-weight: bold;
 }
