--- a/styles.css
+++ b/styles.css
@@ -6,9 +6,9 @@ body {
 }
 
 * {
-    border-style: dashed;
+  /*  border-style: dashed;
     border-width: 1px;
-    border-color: red;
+    border-color: red; */
     font-family: roboto;
 }
 
@@ -66,7 +66,7 @@ ul a {
     flex: 0 1 auto;
 }
 
-button {
+.header-button {
    width: 150px;
    height: 35px;
    border-radius: 10px;
@@ -181,4 +181,72 @@ footer {
     margin: 0;
     font-size: 36px;
     font-weight: bold;
+}
+
+/* Section 4 */
+
+.section-four {
+    background-color: #f9faf8;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.section-wrapper4 {
+    background-color: #3882f6;
+    width: 900px;
+    height: 150px;
+    margin: 100px;
+    display: flex;
+    justify-content: space-between;
+    padding: 15px 50px;
+    border-radius: 10px;
+    align-items: center;
+    
+}
+
+.action-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 5px;
+    margin-left: 75px;
+}
+
+.top-text {
+    text-align: left;
+    margin: 0;
+    font-size: 24px;
+    color: #f9faf8;
+    font-weight: bold;
+}
+
+.bottom-text {
+    text-align: left;
+    margin: 0;
+    color: #e5e7eb
+}
+
+.action-button {
+    width: 125px;
+    height: 35px;
+    margin-right: 75px;
+    background-color: transparent;
+    border-style: solid;
+    border-color: #f9faf8;
+    border-radius: 10px;
+    border-width: 2px;
+    color: #f9faf8;
+    font-weight: bold;
+    font-size: 16px;
+}
+
+
+
+footer {
+    background-color: #1f2937;
+    color: #f9faf8;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
